<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/grass_background_201062"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"

        android:ems="10"
        android:hint="@string/etUsername"
        android:inputType="textPersonName"
        android:text="@string/etUsername"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="181dp"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword"

        android:text="@string/etPassword"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="153dp"
        android:text="@string/bLogin"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp"
        android:text="@string/tvRegisterHere"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />
</RelativeLayout>
